example/secondfile/objects/RDS_Mutlicast_V6__c.object
<CustomObject>
    <description>Premise Details- Premise Data-Cictui and VLAN Details-VPN Data-RDS-Mutlicast V6</description>
    <fields>
        <fullName>C_Group_IP_Address__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6- C Group IP Address- C Group IP Address</description>
        <label>C Group IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Group_IP_Length__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6-C Group IP Address-C Group IP Length</description>
        <label>C Group IP Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pimssm_IP_Address__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6-Pimssm IP Details- Pimssm IP Address</description>
        <label>Pimssm IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pimssm_IP_Length__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6-Pimssm IP Details- Pimssm IP Address</description>
        <label>Pimssm IP Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_VPN_Data_V6__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast-Mutlicast V6</description>
        <label>RDS-VPN Data V6</label>
        <referenceTo>RDS_VPN_Data__c</referenceTo>
        <relationshipLabel>RDS-Mutlicast V6</relationshipLabel>
        <relationshipName>RDS_Mutlicast_V6</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_RP_IP_Address__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6</description>
        <label>Static RP IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_RP_Override_Indicator__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6-Static Rendezvouz Point-Static RP Override Indicator</description>
        <label>Static RP Override Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Pimssm_Default_IP_Indicator__c</fullName>
        <description>Premide Details- Premise Data-Circuit And VLAN Details-VPN Data-Multicast-Mutlicast V6-Pimssm Data- Use Pimssm Default IP Indicator</description>
        <label>Use Pimssm Default IP Indicator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>RDS-Mutlicast V6</label>
    <nameField>
        <displayFormat>MV6-{00000}</displayFormat>
        <label>RDS-Mutlicast V6 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Mutlicast V6</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lookup_to_VPN6_cannot_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( RDS_VPN_Data_V6__c )</errorConditionFormula>
        <errorMessage>The reference to VPN Data V6 cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RDS_Edit_Expired</fullName>
        <active>true</active>
        <description>RDS Edit Expired</description>
        <errorConditionFormula>AND(OR(if(RDS_VPN_Data_V6__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),True,False),ISPICKVAL( RDS_VPN_Data_V6__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
                $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_V6Multi</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Mutlicast V6 record.</errorMessage>
    </validationRules>
</CustomObject>